--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body{
     background: #fff ;
     font-family: arial, helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 16px;
    
 }
 
@@ -27,6 +27,7 @@ body{
   nav {
     order: 2; /* Coloca o menu de texto segundo na ordem */
     text-align: center;
+    margin-left: 200px;
   }
   
   nav ul {
@@ -74,19 +75,19 @@ body{
 }
 
 .icon-menu img{
-  height: 20px;
-  width: 20px;
+  height:43.14px;
+  width: 43.14px;
 }
 
 
  
-  .banner{
+.banner{
     position: relative;
     background: #ffffff;
     height: 55px;
     background: #ae606e;
 
-  }
+}
 
   .banner p{
     padding: 20px;
@@ -200,9 +201,132 @@ body{
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  box-shadow: 2px 1px #d9d9d9;
 }
 
 .action-button:hover {
   background-color: #FFE4E9;
-  color: #F7C4CD;
+  color: #ae606e;
+}
+
+.image-container1 {
+  position: relative;
+  display: flex;
+  float: left;
+  align-items: center;
+  margin-left:120px;
+  margin-top: 500px;
+  margin-bottom: 20px;
+}
+.image-container1 img {
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+}
+.image-container1 p {
+  margin: 0;
+  font-size: 32px;
+  text-align: right;
+  color: #ae606e;
+  font-weight: bold;
+}
+
+#footer{
+  position: relative;
+  display: flex;
+  float: left;
+  align-items: center;
+  background-color: #ae606e;
+  width: 100%;
+  height: 280px;
+  margin-top: 100px;
+}
+
+.textos{
+  position: relative;
+  margin-left: 120px;
+  margin-top: -120px;
+}
+
+.textos h1{
+  color: #fff;
+  font-weight: bold;
+  font-size: 32px;
+
+}
+
+.textos h2{
+  margin-top: 10px;
+}
+
+.textos h2 a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: lighter;
+
+}
+
+.textos h2 a:hover{
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+
+}
+
+.textos1{
+  position: relative;
+  margin-left: 130px;
+  margin-top: -60px;
+}
+
+.textos1 h1{
+  color: #fff;
+  font-weight: bold;
+  font-size: 32px;
+
+}
+
+.textos1 h2{
+  margin-top: 10px;
+}
+
+.textos1 h2 a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: lighter;
+
+}
+
+.textos1 h2 a:hover{
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+
+}
+
+.icons{
+  display: flex;
+  position: relative;
+  margin-top: -200px;
+  margin-left: 340px;
+}
+
+.icons img {
+  margin-left: 20px;
+}
+
+.texto1{
+  position: absolute;
+  margin-top: -40px;
+  margin-left: 1250px;
+}
+
+.texto1 h2{
+  color: #fff;
+  font-weight: bold;
+  text-align: right;
 }
